<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.androidveteran.android.restclient.activity.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvLoginSignInWithEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogin"
        android:text="@string/login_sign_in_using_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginSignInWithEmailLabel"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/ic_email_primary_24dp"
        android:drawablePadding="@dimen/padding_16"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_16"
        android:singleLine="true" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLoginEmail"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/ic_lock_primary_24dp"
        android:drawablePadding="@dimen/padding_16"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_16"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etLoginPassword"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/background_button_login"
        android:text="@string/login_login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnLoginSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLoginLogin"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/background_button_signup"
        android:text="@string/login_sign_up"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/llLoginOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLoginSignUp"
        android:layout_marginTop="@dimen/margin_16"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="OR"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvLoginSignInWithSocialLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLoginOr"
        android:layout_marginTop="@dimen/margin_16"
        android:text="Sign In Using:"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginSignInWithSocialLabel"
        android:layout_marginTop="@dimen/margin_16" />

    <Button
        android:id="@+id/btnLoginSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/selectableItemBackground"
        android:text="@string/string_login_skip_for_now"
        android:textColor="@android:color/white" />

</RelativeLayout>